# ChangeLog for media-libs/fontconfig
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.118 2008/06/22 16:51:45 pva Exp $

  22 Jun 2008; Peter Volkov <pva@gentoo.org>
  +files/fontconfig-2.6.0-parallel.patch, fontconfig-2.6.0-r1.ebuild:
  Fixed parallel build failure, bug #225079, thank Iain for report.

*fontconfig-2.6.0-r1 (04 Jun 2008)

  04 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  -fontconfig-2.5.93-r1.ebuild, -fontconfig-2.6.0.ebuild,
  +fontconfig-2.6.0-r1.ebuild:
  Bump with fc-lang changes included.

  03 Jun 2008; Ryan Hill <dirtyepic@gentoo.org> ChangeLog:
  Fix ugly Changelog.

*fontconfig-2.6.0 (03 Jun 2008)

  03 Jun 2008; Ryan Hill <dirtyepic@gentoo.org> -fontconfig-2.5.92.ebuild,
  -fontconfig-2.5.93.ebuild, +fontconfig-2.6.0.ebuild:
  Version bump. No differences from 2.5.93-r1.

  Major changes since 2.5.0:
  	* Handle bitmap-only TTF files that do not have a GLYF table
  	* Ignore point size and DPI for bitmap (PCF) fonts.
  	* Add fantasy and cursive generic families
  	* Merge Fedora and Mandriva configuration options
  	* Build fixes for cross compile and Win32 platforms

*fontconfig-2.5.93-r1 (01 Jun 2008)

  01 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  +fontconfig-2.5.93-r1.ebuild:
  Install fc-lang directory, needed to test font language coverage.

  30 May 2008; Alexis Ballier <aballier@gentoo.org>
  fontconfig-2.5.93.ebuild:
  Readd libtoolize call for fbsd

*fontconfig-2.5.93 (25 May 2008)

  25 May 2008; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.93.ebuild:
  Version bump.

  (should've waited an hour)

*fontconfig-2.5.92 (25 May 2008)

  25 May 2008; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.92.ebuild:
  Version bump.

  04 May 2008; Peter Volkov <pva@gentoo.org>
  +files/fontconfig-2.5.0-libtool-2.2.patch, fontconfig-2.5.0-r1.ebuild:
  Fixed compilation with libtool-2.2, bug #213831, thank Alessandro Guido